package com.farmovo.backend.dto.request;

public record OtpRequest(String otp) {
} 