package com.farmovo.backend.dto.response;

public record ChangePassword(String password, String repeatPassword) {
}
